force-app/main/default/objects/Product__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Infowelders, NPA Rollout: Used to store the related Brand</description>
    <label>Brand</label>
    <referenceTo>Brand__c</referenceTo>
    <relationshipName>Product</relationshipName>
    <type>Lookup</type>
</CustomField>