force-app/main/default/objects/Product__c/fields/COS_Net_of_ICP__c.field-meta.xml
<CustomField>
    <fullName>COS_Net_of_ICP__c</fullName>
    <defaultValue>0</defaultValue>
    <label>COS Net of ICP</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>