force-app/main/default/objects/Product__c/fields/CVS__c.field-meta.xml
<CustomField>
    <fullName>CVS__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CVS</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>