force-app/main/default/objects/Product__c/fields/Education_Tax__c.field-meta.xml
<CustomField>
    <fullName>Education_Tax__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Education Tax</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>