force-app/main/default/objects/Product__c/fields/Excise__c.field-meta.xml
<CustomField>
    <fullName>Excise__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Excise</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>