force-app/main/default/objects/Product__c/fields/Gross_Profit_Flat_Case__c.field-meta.xml
<CustomField>
    <fullName>Gross_Profit_Flat_Case__c</fullName>
    <formula>Pack_Quantity__c * Gross_Profit_per_Bottle__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Profit / Flat Case</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>