force-app/main/default/objects/Product__c/fields/Gross_Profit_per_Bottle__c.field-meta.xml
<CustomField>
    <fullName>Gross_Profit_per_Bottle__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Gross Profit / Bottle</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>