force-app/main/default/objects/Product__c/fields/Gross_Profit_per_Case__c.field-meta.xml
<CustomField>
    <fullName>Gross_Profit_per_Case__c</fullName>
    <description>Gross Profit per 9L Case</description>
    <inlineHelpText>Gross Profit per 9L Case</inlineHelpText>
    <label>Gross Profit / Case</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>