force-app/main/default/objects/Product__c/fields/Image_Name__c.field-meta.xml
<CustomField>
    <fullName>Image_Name__c</fullName>
    <label>Image Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>