force-app/main/default/objects/Product__c/fields/POSM_Cost__c.field-meta.xml
<CustomField>
    <fullName>POSM_Cost__c</fullName>
    <label>POSM Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>