force-app/main/default/objects/Product__c/fields/Used_For__c.field-meta.xml
<CustomField>
    <fullName>Used_For__c</fullName>
    <description>What this product can be used for</description>
    <inlineHelpText>What this product can be used for</inlineHelpText>
    <label>Used For</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Survey</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>CPT</fullName>
            </value>
            <value>
                <fullName>Fee</fullName>
            </value>
            <value>
                <fullName>Incentive</fullName>
            </value>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>Sample Order</fullName>
            </value>
            <value>
                <fullName>Sample Order - E-Premise</fullName>
            </value>
            <value>
                <fullName>High Value</fullName>
            </value>
            <value>
                <fullName>Sample Order - UK</fullName>
            </value>
            <value>
                <fullName>Employee Request</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Sample Order - TWN</fullName>
            </value>
            <value>
                <fullName>Sample Order - Storeroom Request</fullName>
            </value>
            <value>
                <fullName>Sample Order - MEX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>