force-app/main/default/objects/Product__c/fields/VAP_COS__c.field-meta.xml
<CustomField>
    <fullName>VAP_COS__c</fullName>
    <defaultValue>0</defaultValue>
    <label>VAP COS</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>